# bot

MOYA/: .env.prod  README.md  pyproject.toml
MOYA/data/: data.sqlite3  data.sqlite3-shm  data.sqlite3-wal
MOYA/data/learning_chat/: learning_chat.db  learning_chat.db-shm  learning_chat.db-wal  learning_chat.yml
MOYA/src/plugins/base_communication/: __init__.py  greet.py  jab.py
MOYA/src/plugins/keywords/: __init__.py  greet.py
VME50/: .env.prod  README.md  bot.py  pyproject.toml
VME50/accounts/2715312962/: config.yml  device.json  session.token
VME50/accounts/2715312962/data/images/: 000018.ldb  000023.ldb  000026.ldb  000029.ldb  000231.ldb  LOG  MANIFEST-000031  MANIFEST-000228
VME50/accounts/binary/: accounts.pkl
VME50/src/plugins/keywords/: __init__.py  echo.py  greet.py
go-cqhttp/: config.yml  session.token
go-cqhttp/data/images/: 000016.ldb  000019.ldb  000026.ldb  000028.ldb  000029.ldb  000032.ldb  000046.ldb  000055.ldb  000056.ldb  000059.ldb  000071.ldb  000073.ldb  000074.ldb  000081.ldb  000083.ldb  000084.ldb  000090.ldb  LOG  MANIFEST-000018  MANIFEST-000021  MANIFEST-000031  MANIFEST-000034  MANIFEST-000061  MANIFEST-000076  MANIFEST-000088
go-cqhttp/data/leveldb-v3/: 000019.ldb  000022.ldb  000023.ldb  000027.ldb  000030.ldb  000033.ldb  000034.ldb  000038.ldb  000040.ldb  000043.ldb  000045.ldb  000046.ldb  000049.ldb  000055.ldb  000061.ldb  000062.ldb  000066.ldb  000070.ldb  LOG  MANIFEST-000021  MANIFEST-000025  MANIFEST-000032  MANIFEST-000036  MANIFEST-000051  MANIFEST-000064  MANIFEST-000072
go-cqhttp/data/videos/: LOG
(+9 files in other folders)
