[project]
name = "MOYA"
version = "0.1.0"
description = "MOYA"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["haruka_bot", "nonebot_plugin_memes", "nonebot_plugin_no_repeat", "nonebot_plugin_withdraw", "nonebot_plugin_repeater", "nonebot_plugin_bing_chat"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
